force-app/main/default/objects/RazorpayPaymentLink__c/RazorpayPaymentLink__c.object-meta.xml
<CustomObject>
    <label>Razorpay Payment Link</label>
    <nameField>
        <displayFormat>LinkID - {YYYY}{MM}{DD}{0}</displayFormat>
        <label>Razorpay Payment Link ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Razorpay Payment Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>