force-app/main/default/objects/RazorpayPaymentLink__c/fields/CustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerEmail__c</fullName>
    <label>Customer Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>