force-app/main/default/objects/RazorpayPaymentLink__c/fields/CustomerPhone__c.field-meta.xml
<CustomField>
    <fullName>CustomerPhone__c</fullName>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>