force-app/main/default/objects/RazorpayPaymentLink__c/fields/RazorpayID__c.field-meta.xml
<CustomField>
    <fullName>RazorpayID__c</fullName>
    <externalId>true</externalId>
    <label>Razorpay ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>