force-app/main/default/objects/RazorpayPaymentLink__c/fields/ReferenceID__c.field-meta.xml
<CustomField>
    <fullName>ReferenceID__c</fullName>
    <externalId>true</externalId>
    <label>Reference ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>