force-app/main/default/objects/RazorpayPaymentLink__c/fields/ScheduledCourseId__c.field-meta.xml
<CustomField>
    <fullName>ScheduledCourseId__c</fullName>
    <label>Scheduled Course Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>