force-app/main/default/objects/RazorpayPaymentLink__c/fields/ShortUrl__c.field-meta.xml
<CustomField>
    <fullName>ShortUrl__c</fullName>
    <label>Short Url</label>
    <type>Url</type>
</CustomField>