force-app/main/default/objects/RazorpayPaymentLink__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>ReferenceID__c</columns>
    <columns>Student__c</columns>
    <columns>ShortUrl__c</columns>
    <columns>RazorpayID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>